# breadcrumb

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/core/: index.html
api/flaky/: index.html
api/generate/: index.html
api/playwright/: index.html
api/report/: index.html
architecture/: index.html
benchmarks/: __init__.py  bench_healing.py  bench_similarity.py  bench_storage.py
breadcrumb/: __init__.py
breadcrumb/cli/: __init__.py  main.py
breadcrumb/core/: __init__.py  fingerprint.py  healer.py  similarity.py  storage.py
breadcrumb/flaky/: __init__.py  analyzer.py  quarantine.py  tracker.py
breadcrumb/generate/: __init__.py  classifier.py  codegen.py  crawler.py
breadcrumb/mcp/: __init__.py  server.py
breadcrumb/playwright/: __init__.py  extractor.py  page_wrapper.py
breadcrumb/plugins/: __init__.py  pytest_plugin.py
breadcrumb/report/: __init__.py  console.py  html.py  json.py
changelog/: index.html
cli/: index.html
concepts/: index.html
docs/: architecture.md  changelog.md  cli.md  concepts.md  getting-started.md  index.md  mcp.md  troubleshooting.md
docs/api/: core.md  flaky.md  generate.md  playwright.md  report.md
examples/: test_login.py
getting-started/: index.html
mcp/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_cli.py  test_extractor.py  test_fingerprint.py  test_flaky.py  test_generate.py  test_healer.py  test_integration.py  test_mcp.py  test_page_wrapper.py  test_pytest_plugin.py  test_report.py  test_security.py  test_similarity.py  test_storage.py
tests/demo_app/: v1.html  v2.html
troubleshooting/: index.html
