[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "breadcrumb"
version = "0.1.0-dev"
description = "Self-healing test framework for Playwright. Your tests survive app changes."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Faraaz Suffla" },
]
keywords = [
    "testing",
    "playwright",
    "self-healing",
    "test-automation",
    "qa",
    "locator",
    "flaky-tests",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "playwright>=1.40",
    "click>=8.0",
]

[project.optional-dependencies]
ai = ["ollama>=0.1"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
    "mypy>=1.10",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/FaraazSuffla/breadcrumb"
Documentation = "https://breadcrumb.readthedocs.io"
Repository = "https://github.com/FaraazSuffla/breadcrumb"
Issues = "https://github.com/FaraazSuffla/breadcrumb/issues"
Changelog = "https://github.com/FaraazSuffla/breadcrumb/blob/main/CHANGELOG.md"

[project.scripts]
breadcrumb = "breadcrumb.cli.main:cli"

[project.entry-points."pytest11"]
breadcrumb = "breadcrumb.plugins.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["breadcrumb*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["breadcrumb"]

[tool.coverage.report]
fail_under = 90
show_missing = true
