[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-breadcrumb"
version = "0.1.0a2"
description = "Self-healing test framework for Playwright. Your tests survive app changes."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Faraaz Suffla" },
]
keywords = [
    "testing",
    "playwright",
    "self-healing",
    "test-automation",
    "qa",
    "locator",
    "flaky-tests",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = ["click>=8.0"]

[project.scripts]
breadcrumb = "breadcrumb.cli.main:cli"

[project.entry-points."pytest11"]
breadcrumb = "breadcrumb.plugins.pytest_plugin"

[project.optional-dependencies]
playwright = ["playwright>=1.40", "pytest-playwright>=0.5"]
ai = ["ollama>=0.1"]
mcp = ["mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
    "click>=8.0",
    "ruff>=0.4",
    "pyright>=1.1",
    "mypy>=1.10",
    "pre-commit>=3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/FaraazSuffla/breadcrumb"
Repository = "https://github.com/FaraazSuffla/breadcrumb"
Issues = "https://github.com/FaraazSuffla/breadcrumb/issues"
Changelog = "https://github.com/FaraazSuffla/breadcrumb/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["breadcrumb*"]

# ---- Ruff ----

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "RUF"]
ignore = [
    "UP035",   # deprecated-import — we use typing.Sequence for 3.10 compat
    "SIM108",  # ternary — sometimes if/else is clearer
]

[tool.ruff.lint.isort]
known-first-party = ["breadcrumb"]

# ---- Pyright ----

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["breadcrumb"]

# ---- Mypy ----

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

# ---- Pytest ----

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: end-to-end tests requiring Playwright + Chromium (run with --integration)",
]

[tool.coverage.run]
source = ["breadcrumb"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
